[gd_scene load_steps=5 format=3 uid="uid://dky31n5a33eti"]

[ext_resource type="Script" path="res://options.gd" id="1_0242a"]
[ext_resource type="FontFile" uid="uid://1e460hymjugv" path="res://PublicPixel-E447g.ttf" id="1_xt1na"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex4c3"]
bg_color = Color(0.619608, 0.482353, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gwkv"]
bg_color = Color(0.190815, 0.146045, 2.40654e-08, 1)

[node name="Panel" type="Panel"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -42.0
offset_right = 131.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ex4c3")
script = ExtResource("1_0242a")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 20.0
theme_override_fonts/normal_font = ExtResource("1_xt1na")
theme_override_font_sizes/normal_font_size = 16
text = "Options"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 67.0
offset_right = 250.0
offset_bottom = 87.0
theme_override_fonts/normal_font = ExtResource("1_xt1na")
theme_override_font_sizes/normal_font_size = 16
text = "SFX"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 46.0
offset_right = 250.0
offset_bottom = 66.0
theme_override_fonts/normal_font = ExtResource("1_xt1na")
theme_override_font_sizes/normal_font_size = 16
text = "MUS"

[node name="HScrollBar" type="HScrollBar" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 46.0
offset_right = 244.0
offset_bottom = 61.0
theme_override_styles/scroll = SubResource("StyleBoxFlat_1gwkv")
max_value = 2.0
step = 0.05
value = 1.0

[node name="HScrollBar2" type="HScrollBar" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 66.0
offset_right = 244.0
offset_bottom = 81.0
theme_override_styles/scroll = SubResource("StyleBoxFlat_1gwkv")
max_value = 2.0
step = 0.05
value = 1.0

[connection signal="value_changed" from="HScrollBar" to="." method="_on_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="HScrollBar2" to="." method="_on_h_scroll_bar_2_value_changed"]
